fury-on-eks/manifests/logging/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Cerebro"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/cerebro.png"
  name: cerebro
  namespace: logging
spec:
  rules:
  - host: cerebro.fury.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cerebro
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Opensearch Dashboards"
    forecastle.stakater.com/icon: "https://avatars.githubusercontent.com/u/80134844?s=200&v=4"
  name: opensearch-dashboards
  namespace: logging
spec:
  rules:
  - host: opensearch-dashboards.fury.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opensearch-dashboards
            port:
              name: http
---
